kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: ghcr.io/dargor94/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
      imagePullSecrets:
        - name: regcred
