kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort:  8081
  selector:
    app: auth-service
